fix utility spacing classes

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -6,7 +6,6 @@
 @each $key, $each-breakpoint-size in $breakpoints {
 	@media (min-width: $each-breakpoint-size) {
 		@include gap($key);
-		@include radius($key);
 		@include padding($key);
 		@include margin($key);
 		@include width($key);
