--- a/scss/utilities/_padding.scss
+++ b/scss/utilities/_padding.scss
@@ -1,88 +1,89 @@
 @use '../units' as *;
 
 .p {
-	@while $i <= 48 {
+	@while $i <= 120 {
 		&t {
-			&-#{$i} {
+			&-#{$x} {
 				padding-top: #{$i * $base-rem-value}rem;
 			}
 		}
 		&r {
-			&-#{$i} {
+			&-#{$x} {
 				padding-right: #{$i * $base-rem-value}rem;
 			}
 		}
 		&b {
-			&-#{$i} {
+			&-#{$x} {
 				padding-bottom: #{$i * $base-rem-value}rem;
 			}
 		}
 		&l {
-			&-#{$i} {
+			&-#{$x} {
 				padding-left: #{$i * $base-rem-value}rem;
 			}
 		}
 		&y {
-			&-#{$i} {
+			&-#{$x} {
 				padding-top: #{$i * $base-rem-value}rem;
 				padding-bottom: #{$i * $base-rem-value}rem;
 			}
 		}
 		&x {
-			&-#{$i} {
+			&-#{$x} {
 				padding-right: #{$i * $base-rem-value}rem;
 				padding-left: #{$i * $base-rem-value}rem;
 			}
 		}
 		&a {
-			&-#{$i} {
+			&-#{$x} {
 				padding-top: #{$i * $base-rem-value}rem;
 				padding-right: #{$i * $base-rem-value}rem;
 				padding-bottom: #{$i * $base-rem-value}rem;
 				padding-left: #{$i * $base-rem-value}rem;
 			}
 		}
-		$i: $i + 8;
+		$i: $i + 4;
+		$x: $x + 1;
 	}
 }
 
 @mixin padding($breakpoint) {
-	@while $i <= 48 {
+	@while $i <= 120 {
 		.p {
 			&t {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-top: #{$i * $base-rem-value}rem;
 				}
 			}
 			&r {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-right: #{$i * $base-rem-value}rem;
 				}
 			}
 			&b {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-bottom: #{$i * $base-rem-value}rem;
 				}
 			}
 			&l {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-left: #{$i * $base-rem-value}rem;
 				}
 			}
 			&y {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-top: #{$i * $base-rem-value}rem;
 					padding-bottom: #{$i * $base-rem-value}rem;
 				}
 			}
 			&x {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-right: #{$i * $base-rem-value}rem;
 					padding-left: #{$i * $base-rem-value}rem;
 				}
 			}
 			&a {
-				&-#{$breakpoint}-#{$i} {
+				&-#{$breakpoint}-#{$x} {
 					padding-top: #{$i * $base-rem-value}rem;
 					padding-right: #{$i * $base-rem-value}rem;
 					padding-bottom: #{$i * $base-rem-value}rem;
@@ -90,6 +91,7 @@
 				}
 			}
 		}
-		$i: $i + 8;
+		$i: $i + 4;
+		$x: $x + 1;
 	}
 }
